// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@artifak/grid Grid should render 1`] = `
<DocumentFragment>
  .c0 {
  display: grid;
  grid-gap: 1.5rem;
}

<div
    class="c0"
    display="grid"
  >
    <div
      class=""
    >
      1
    </div>
    <div
      class=""
    >
      2
    </div>
    <div
      class=""
    >
      3
    </div>
    <div
      class=""
    >
      4
    </div>
    <div
      class=""
    >
      5
    </div>
    <div
      class=""
    >
      6
    </div>
  </div>
</DocumentFragment>
`;

exports[`@artifak/grid Grid should render grid-auto-columns style if no columnSize prop is provided 1`] = `
<DocumentFragment>
  .c0 {
  display: grid;
  grid-gap: 1.5rem;
  grid-auto-columns: 200px;
}

<div
    class="c0"
    data-testid="grid"
    display="grid"
  >
    <div
      class=""
    >
      1
    </div>
    <div
      class=""
    >
      2
    </div>
    <div
      class=""
    >
      3
    </div>
    <div
      class=""
    >
      4
    </div>
    <div
      class=""
    >
      5
    </div>
    <div
      class=""
    >
      6
    </div>
  </div>
</DocumentFragment>
`;

exports[`@artifak/grid Grid should render gridGap style if a value is provided 1`] = `
<DocumentFragment>
  .c0 {
  display: grid;
  grid-gap: 20px;
}

<div
    class="c0"
    data-testid="grid"
    display="grid"
  >
    <div
      class=""
    >
      1
    </div>
    <div
      class=""
    >
      2
    </div>
    <div
      class=""
    >
      3
    </div>
    <div
      class=""
    >
      4
    </div>
    <div
      class=""
    >
      5
    </div>
    <div
      class=""
    >
      6
    </div>
  </div>
</DocumentFragment>
`;
